# ------------------------------------------------------------------------------
# CMake file for MetabaseNet
#
# Copyright (c) 2022-2024 The MetabaseNet developers
# Distributed under the MIT/X11 software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.
# ------------------------------------------------------------------------------

# sub directories
add_subdirectory(blockchain)
add_subdirectory(mtbase)
add_subdirectory(crypto)
add_subdirectory(common)
add_subdirectory(mpvss)
add_subdirectory(storage)
add_subdirectory(network)
add_subdirectory(delegate)
add_subdirectory(leveldb)
add_subdirectory(snappy)
add_subdirectory(jsonrpc)
add_subdirectory(wvm)
add_subdirectory(mvm)
add_subdirectory(meth)
